--- a/APIWelfareProcedures/appsettings.json
+++ b/APIWelfareProcedures/appsettings.json
@@ -7,8 +7,10 @@
   },
   "AllowedHosts": "*",
   "AuthSettings": {
-    "post_uri": "https://bienestar-presidencia.xutil.cu/presidencia/oauth2/token",
-    "bearerToken": "eb58a4e878459a188aa8175a57e5f9fda4802f76.."
+    "base_uri": "https://bienestar-presidencia.xutil.cu",
+    "post_uri": "presidencia/oauth2/token",
+    "get_uri": "api/1.0/presidencia/plugin-pmPresidencia/presidencia/asignados/minint?start=0&limit=1",
+    "bearerToken": "eb58a4e878459a188aa8175a57e5f9fda4802f76"
   },
   "RequestPostBodyParameters": {
     "grant_type": "password",
