HttpGet - Última encomienda

--- a/APIWelfareProcedures/appsettings.json
+++ b/APIWelfareProcedures/appsettings.json
@@ -9,7 +9,7 @@
   "AuthSettings": {
     "base_uri": "https://bienestar-presidencia.xutil.cu",
     "post_uri": "presidencia/oauth2/token",
-    "get_uri": "api/1.0/presidencia/plugin-pmPresidencia/presidencia/asignados/minint?start=0&limit=1",
+    "get_uri": "api/1.0/presidencia/plugin-pmPresidencia/presidencia/asignados/minint",
     "bearerToken": "eb58a4e878459a188aa8175a57e5f9fda4802f76"
   },
   "RequestPostBodyParameters": {
